added button 'login with GitHub' and link router-dom 'Registration' 'Logout'

--- a/src/index.css
+++ b/src/index.css
@@ -6,18 +6,17 @@
 
 body {
     min-height: 100vh;
-    background: rgb(86,122,129);
-    background: linear-gradient(56deg, rgba(86,122,129,1) 10%, rgba(41,129,147,1) 41%, rgba(9,55,64,1) 100%);
+    background: #0E6F75;
+    /*background: rgb(86, 122, 129);*/
+    /*background: linear-gradient(56deg, rgba(86, 122, 129, 1) 10%, rgba(41, 129, 147, 1) 41%, rgba(9, 55, 64, 1) 100%);*/
 }
 
 .btn {
-    @apply bg-brand-secondary min-w-[237px] rounded-3xl border-0 p-5 text-white
+    @apply min-w-[237px] rounded-3xl border-0 p-5 text-white
 }
 
-.btn--accent {
-    @apply bg-brand-accent
-}
 
 body {
     @apply font-montserrat
 }
+
